--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "wikijs-mcp",
-	"version": "1.0.0",
+	"version": "1.0.1",
 	"description": "WikiJS MCP Server",
 	"main": "build/index.js",
 	"type": "module",
@@ -32,7 +32,8 @@
 		"zod": "^3.25.64",
 		"dotenv": "^16.3.1",
 		"graphql": "^16.11.0",
-		"graphql-request": "^7.2.0"
+		"graphql-request": "^7.2.0",
+		"graphql-tag": "^2.12.6"
 	},
 	"devDependencies": {
 		"@graphql-codegen/cli": "^5.0.7",
