--- a/package.json
+++ b/package.json
@@ -14,7 +14,13 @@
 		"url": "https://github.com/RicardoCenci/wikijs-mcp/issues"
 	},
 	"homepage": "https://github.com/RicardoCenci/wikijs-mcp#readme",
-	"keywords": ["mcp", "wikijs", "model-context-protocol", "ai", "assistant"],
+	"keywords": [
+		"mcp",
+		"wikijs",
+		"model-context-protocol",
+		"ai",
+		"assistant"
+	],
 	"files": [
 		"build/**/*",
 		"README.md",
@@ -29,17 +35,19 @@
 	},
 	"dependencies": {
 		"@modelcontextprotocol/sdk": "^1.12.3",
-		"zod": "^3.25.64",
 		"dotenv": "^16.3.1",
+		"express": "^5.1.0",
 		"graphql": "^16.11.0",
 		"graphql-request": "^7.2.0",
-		"graphql-tag": "^2.12.6"
+		"graphql-tag": "^2.12.6",
+		"zod": "^3.25.64"
 	},
 	"devDependencies": {
 		"@graphql-codegen/cli": "^5.0.7",
 		"@graphql-codegen/typescript": "^4.1.6",
 		"@graphql-codegen/typescript-graphql-request": "^6.3.0",
 		"@graphql-codegen/typescript-operations": "^4.6.1",
+		"@types/express": "^5.0.3",
 		"@types/node": "^24.0.1",
 		"typescript": "^5.8.3"
 	}
