feat: updating documentation with streamable http config

--- a/env.example
+++ b/env.example
@@ -1,2 +1,13 @@
 WIKIJS_URL=http://localhost:3000
 WIKIJS_API_KEY= 
+
+TRANSPORT_METHOD=stdio
+
+TRANSPORT_OPTIONS_PORT=
+TRANSPORT_OPTIONS_HOST=
+
+TRANSPORT_OPTIONS_CORS_ORIGIN=
+TRANSPORT_OPTIONS_CORS_HEADERS=
+TRANSPORT_OPTIONS_CORS_METHODS=
+
+TRANSPORT_OPTIONS_SESSION_TIMEOUT_MS=
